--- a/test/dashboard.html
+++ b/test/dashboard.html
@@ -3,11 +3,14 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
   <title>Unit Tests For Helpers.JS</title>
-   <link rel="stylesheet" href="/qunit/qunit.css">
+   <link rel="stylesheet" href="qunit/qunit.css">
 </head>
 
 <body>
   <div id="qunit"></div>
-  <script src="/qunit/qunit.js"></script>
+  <script src="qunit/qunit.js"></script>
+  <script src="jquery/jquery.js"></script>
+  <script src="../queryString.js"></script>
+  <script src="test-cases/queryString.js"></script>
 </body>
 </html>
